# zvec

./: pyproject.toml
.github/workflows/: 01-ci-pipeline.yml  05-windows-build.yml  08-wasm-build.yml  _build_wheel_job.yml  build_wheel.yml
examples/wasm/: CMakeLists.txt  index.html  zvec_wasm.cc
python/tests/: test_query_executor.py
python/zvec/executor/: query_executor.py
src/core/metric/: mips_euclidean_metric.cc
src/db/: collection.cc
src/db/common/: file_helper.h
src/db/index/column/fts_column/: fts_indexer.cc  fts_indexer.h
src/db/index/common/: meta.h  schema.cc  type_helper.h
src/db/index/segment/: segment.cc  segment.h  segment_helper.cc  segment_helper.h
src/db/proto/: zvec.proto
src/db/sqlengine/planner/: vector_recall_node.cc
src/include/zvec/ailego/buffer/: concurrentqueue.h
src/include/zvec/ailego/internal/: platform.h
src/include/zvec/ailego/pattern/: expected.hpp
src/include/zvec/core/framework/: index_context.h
src/include/zvec/db/: type.h
tests/: android_gmock_main.cc  android_gtest_main.cc  ios_test_sandbox.cc
tests/ailego/parallel/: lock_test.cc  thread_queue_test.cc
tests/core/algorithm/hnsw/: hnsw_streamer_buffer_test.cc
tests/core/utility/: buffer_storage_write_test.cc
tests/db/: collection_test.cc
tests/db/crash_recovery/: utility.h
tests/db/index/column/inverted_column/: inverted_column_indexer_bool_test.cc  (+1 more)
tests/db/index/common/: doc_test.cc
tests/db/index/segment/: segment_test.cc
tests/db/sqlengine/: mock_segment.h
tools/core/: recall.cc  recall_original.cc
